// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem Rendering renders correctly 1`] = `
<li
  className="security--nav__list__item class security--nav__list__item--active"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <Link
    className="security--nav__list__item__link"
    element="a"
    href="#"
    id="security--nav__list__item"
    label=""
  >
    Label
  </Link>
</li>
`;

exports[`NavItem Rendering renders the HTML of the node's subtree 1`] = `
<li
  class="security--nav__list__item class security--nav__list__item--active"
  role="menuitem"
  tabindex="-1"
>
  <a
    class="security--nav__list__item__link"
    href="#"
    id="security--nav__list__item"
    label=""
  >
    Label
  </a>
</li>
`;
